[package]
name = "vodka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
arboard = "3.3.0"
argon2 = "0.5.3"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rpassword = "7.3.1"
rusqlite = "0.30.0"
serde = { version = "1.0.201", features = ["serde_derive"] }
sha2 = "0.10.8"
